@@ -91,8 +91,16 @@ $omv-dark-theme: mat.define-dark-theme(
   height: 100% !important;
 }
 
+.omv-h-auto {
+  height: auto;
+}
+
 .omv-w-100 {
   width: 100% !important;
+}
+
+.omv-w-auto {
+  width: auto;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
